--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,8 +1,13 @@
 .main-menu {
   margin-bottom: 2rem;
-  border-bottom: 1px solid rgba(128, 128, 128, 0.38);
+  border-bottom: 2px solid rgba(128, 128, 128, 0.38);
   padding: 1rem;
-  
+  position: fixed;
+  z-index: 2;
+  width: 100vw;
+  top: 0;
+  background-color: rgba(0, 15, 22, 0.2);
+  backdrop-filter: blur(10px);
 }
 
 .main-menu ul {
